# llm-craft

./: .gitignore  Makefile
server-nest/: package.json  pnpm-lock.yaml
server-nest/src/: app.module.ts
server-nest/src/ai/: ai.controller.ts
server-python/: .env.example  README.md  pyproject.toml
server-python/src/: main.py
server-python/src/api/: ai.py
server-python/src/core/: config.py
server-python/src/services/: __init__.py  chat_model.py  guardrail.py  memory.py  rag.py  structured_output.py  tools.py
